🔨 batch insert 1000 skulls at a time, initial inserts are much faster now. re-run a silent download to compare current heads with new ones to see if any is missing then insert. Closes #29
Took 38 minutes