@@ -162,6 +162,30 @@ public final class SkullManager implements Manager {
 	 * For internal use only
 	 */
 
+	private void checkAndFixDatabase() {
+		Bukkit.getServer().getScheduler().runTaskAsynchronously(Skulls.getInstance(), () -> {
+			final Set<Skull> heads = new HashSet<>();
+
+			Common.log("&r&aRunning database check :)");
+
+			for (BaseCategory value : BaseCategory.values()) {
+				final List<Skull> downloaded = downloadHeadCategory(value, true);
+				downloaded.forEach(skull -> {
+					if (this.skulls.contains(skull)) return;
+					heads.add(skull);
+				});
+			}
+
+			if (this.skulls.size() < heads.size()) {
+				Common.log("&r&eFound some missing heads, downloading/inserting them now!");
+
+				this.skulls.addAll(heads);
+				this.idList.addAll(heads.stream().map(Skull::getId).toList());
+				Skulls.getDataManager().insertSkulls(new ArrayList<>(heads));
+			}
+		});
+	}
+
 	public void downloadHeads() {
 		setDownloading(true);
 		Bukkit.getServer().getScheduler().runTaskAsynchronously(Skulls.getInstance(), () -> {
@@ -170,14 +194,15 @@ public final class SkullManager implements Manager {
 			Common.log("&r&aBeginning initial download, it may take some time to insert all the skulls into the data file!");
 
 			for (BaseCategory value : BaseCategory.values()) {
-				heads.addAll(downloadHeadCategory(value));
+				heads.addAll(downloadHeadCategory(value, false));
 			}
 
 			this.skulls.addAll(heads);
-			this.idList.addAll(heads.stream().map(Skull::getId).collect(Collectors.toList()));
+			this.idList.addAll(heads.stream().map(Skull::getId).toList());
 			Skulls.getDataManager().insertSkulls(heads);
 		});
 	}
+
 
 	public List<History> downloadHistories() {
 		final List<History> histories = new ArrayList<>();
@@ -199,7 +224,7 @@ public final class SkullManager implements Manager {
 		return histories;
 	}
 
-	private List<Skull> downloadHeadCategory(@NonNull final BaseCategory category) {
+	public List<Skull> downloadHeadCategory(@NonNull final BaseCategory category, boolean silent) {
 		final List<Skull> heads = new ArrayList<>();
 		try {
 			long start = System.nanoTime();
@@ -221,9 +246,11 @@ public final class SkullManager implements Manager {
 
 			});
 
-			Common.log("&aDownloaded &e" + heads.size() + " &askulls for category &e" + category.getName() + "&a in &f" + String.format("%,.3f", (System.nanoTime() - start) / 1e+6) + "&ems");
+			if (!silent)
+				Common.log("&aDownloaded &e" + heads.size() + " &askulls for category &e" + category.getName() + "&a in &f" + String.format("%,.3f", (System.nanoTime() - start) / 1e+6) + "&ems");
 		} catch (Exception e) {
-			Common.log("&cTweetzy.ca's api is currently unavailable, you can try again shortly.");
+			if (!silent)
+				Common.log("&cTweetzy.ca's api is currently unavailable, you can try again shortly.");
 		}
 
 		return heads;
@@ -289,7 +316,7 @@ public final class SkullManager implements Manager {
 			}
 
 			this.skulls.addAll(all);
-			this.idList.addAll(all.stream().map(Skull::getId).collect(Collectors.toList()));
+			this.idList.addAll(all.stream().map(Skull::getId).toList());
 
 			if (this.skulls.isEmpty()) {
 				Common.log("&cCould not find any skulls, attempting to redownload them!");
@@ -297,6 +324,7 @@ public final class SkullManager implements Manager {
 			} else {
 				Common.log("&aLoaded &e" + this.skulls.size() + " &askulls in &f" + String.format("%,.3f", (System.nanoTime() - start) / 1e+6) + "&ams");
 				setLoading(false);
+				checkAndFixDatabase();
 			}
 		});
 
